--- a/css/table.css
+++ b/css/table.css
@@ -1,7 +1,6 @@
 /* Zebra Striped Table https://www.w3schools.com/howto/howto_css_table_zebra.asp */
 
-
-/* table {
+table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -16,22 +15,4 @@ th {
 
 tr:nth-child(even) {
     background-color: #dddddd;
-} */
-
-
-/* Responsive Tables */
-
-border-collapse: collapse;
-border-spacing: 0;
-width: 100%;
-border: 1px solid #ddd;
-
-}
-th,
-td {
-    text-align: left;
-    padding: 8px;
-}
-tr:nth-child(even) {
-    background-color: #f2f2f2
 }
