--- a/css/froala_blocks.css
+++ b/css/froala_blocks.css
@@ -664,6 +664,27 @@ textarea.form-control {
   .form-inline .form-check {
     width: 100%; }
   @media (min-width: 576px) {
+
+  .sidepanel a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
+    }
+    
+    .sidepanel a:hover {
+      color: #f1f1f1;
+    }
+    
+    .sidepanel .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+    }
+
     .form-inline label {
       display: flex;
       align-items: center;
@@ -1266,6 +1287,8 @@ header {
   header .navbar-nav .active a.nav-link {
     color: #444444; }
   header .navbar-toggler-icon {
+    cursor: pointer;
+    border: none;
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
   header.bg-dark .navbar-nav a.nav-link {
     color: #dcdcdc; }
@@ -1288,3 +1311,35 @@ header + header {
 .bg-gray {
   background-color: #f4f7fe;
   color: #444444; }
+
+  .sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 250px;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+.sidepanel a {
+  padding: 8px 8px 8px 8px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidepanel a:hover {
+  color: #f1f1f1;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+}
