--- a/css/froala_blocks.css
+++ b/css/froala_blocks.css
@@ -365,7 +365,7 @@ mark,
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  /* border: 1px solid #ced4da; */
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
   @media screen and (prefers-reduced-motion: reduce) {
@@ -381,10 +381,10 @@ mark,
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
   .form-control::placeholder {
-    color: #6c757d;
+    color: red;
     opacity: 1; }
   .form-control:disabled, .form-control[readonly] {
-    background-color: #e9ecef;
+    background-color: red;
     opacity: 1; }
 
 select.form-control:focus::-ms-value {
@@ -754,17 +754,17 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #329ef7;
-  border-color: #329ef7; }
+  background-color: red;
+  border-color: red; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #0d8df6;
+    background-color: black;
     border-color: #0986ed; }
   .btn-primary:focus, .btn-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(50, 158, 247, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #329ef7;
+    background-color: red;
     border-color: #329ef7; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
@@ -1313,22 +1313,22 @@ header + header {
   color: #444444; }
 
   .sidepanel  {
-    width: 0;
     position: fixed;
     z-index: 1;
     height: 250px;
     top: 0;
     right: 0;
-    background-color: #111;
+    background-color:white;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    width: 0px;
   }
 .sidepanel a {
   padding: 8px 8px 8px 8px;
   text-decoration: none;
   font-size: 20px;
-  color: #818181;
+  color: black;
   display: block;
   transition: 0.3s;
 }
