--- a/css/slidepanel.css
+++ b/css/slidepanel.css
@@ -1,31 +1,31 @@
 .sidepanel  {
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    height: 250px;
-    top: 0;
-    right: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  top: 0;
+  right: 0;
+  background-color:white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  width: 0px;
+}
 .sidepanel a {
-  padding: 8px 8px 8px 8px;
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+padding: 8px 8px 8px 8px;
+text-decoration: none;
+font-size: 20px;
+color: black;
+display: block;
+transition: 0.3s;
 }
 
 .sidepanel a:hover {
-  color: #f1f1f1;
+color: #f1f1f1;
 }
 
 .sidepanel .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
+position: absolute;
+top: 0;
+right: 25px;
+font-size: 36px;
 }
