display - cập nhật giao diện mới cho view.php

--- a/css/index/searchresult.css
+++ b/css/index/searchresult.css
@@ -1,9 +1,9 @@
-.result-search {
+.search-result {
     clear: both;
     position: relative;
     margin-top: 20px;
     margin-left: 10%;
-    margin-right: 5%;
+    margin-right: 10%;
 }
 
 table {
