--- a/include/contents.html
+++ b/include/contents.html
@@ -13,3 +13,12 @@
     </div>
 </section>
 <a href="Admin/admin-accept.php"></a>
+<div class='search-result'>
+    <p>Your Search - ' . $s . ' - did not match any documents.</p>
+    <p>Suggestions:</p>
+    <ul>
+        <li>Tên Giảng Viên: Mai Hữu Xuân, Lê Quốc Khải, Trần Minh Thái,...</li>
+        <li>Mã Luận Văn: 20071002, 20181003,..</li>
+        <li>Tên Sinh Viên Thực Hiện: Bùi An Khang, Đỗ Nguyễn Minh Triết, Đặng Hoàng Phương,...</li>
+    </ul>
+</div>
