--- a/include/contact.html
+++ b/include/contact.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +5,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <!-- <link type="text/css" rel="stylesheet" href="/css/froala_blocks.css"> -->
     <title>Contact form</title>
+    <!-- Contact Form -->
     <style>
         .fdb-block,
         .fdb-block .container {
@@ -133,56 +130,51 @@
         }
     </style>
 </head>
-
-<body>
-    <section class="fdb-block py-0">
-        <div class="container py-5 my-5" style="background-image: url(imgs/shapes/9.svg);">
-            <div class="row py-5">
-                <div class="col py-5">
-                    <div class="fdb-box fdb-touch">
-                        <div class="row text-center justify-content-center">
-                            <div class="col-12 col-md-9 col-lg-7">
-                                <h1>Contact Us</h1>
-                                <p class="lead">Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy.</p>
-                            </div>
+<section class="fdb-block py-0" id="contact">
+    <div class="container py-5 my-5" style="background-image: url(imgs/shapes/9.svg);">
+        <div class="row py-5">
+            <div class="col py-5">
+                <div class="fdb-box fdb-touch">
+                    <div class="row text-center justify-content-center">
+                        <div class="col-12 col-md-9 col-lg-7">
+                            <h1>Liên lạc tới chúng tôi</h1>
+                            <p class="lead"></p>
                         </div>
+                    </div>
 
-                        <div class="row justify-content-center pt-4">
-                            <div class="col-12 col-md-8">
-                                <form>
-                                    <div class="row">
-                                        <div class="col-12 col-md">
-                                            <input type="text" class="form-control" placeholder="Name">
-                                        </div>
-                                        <div class="col-12 col-md mt-4 mt-md-0">
-                                            <input type="text" class="form-control" placeholder="Email">
-                                        </div>
+                    <div class="row justify-content-center pt-4">
+                        <div class="col-12 col-md-8">
+                            <form method="POST" action="/include/process-contact.php">
+                                <div class="row">
+                                    <div class="col-12 col-md">
+                                        <input type="text" class="form-control" name="name" placeholder="Tên của bạn là gì?">
                                     </div>
+                                    <div class="col-12 col-md mt-4 mt-md-0">
+                                        <input type="email" class="form-control" name="email" placeholder="Địa chỉ Email">
+                                    </div>
+                                </div>
 
-                                    <div class="row mt-4">
-                                        <div class="col">
-                                            <input type="email" class="form-control" placeholder="Subject">
-                                        </div>
+                                <div class="row mt-4">
+                                    <div class="col">
+                                        <input type="text" class="form-control" name="subject" placeholder="Chủ đề bài viết">
                                     </div>
+                                </div>
 
-                                    <div class="row mt-4">
-                                        <div class="col">
-                                            <textarea class="form-control" name="message" rows="3" placeholder="How can we help?"></textarea>
-                                        </div>
+                                <div class="row mt-4">
+                                    <div class="col">
+                                        <textarea class="form-control" name="content" rows="3" placeholder="Suy nghĩ của bạn?"></textarea>
                                     </div>
-                                    <div class="row mt-4">
-                                        <div class="col text-center">
-                                            <button type="submit" class="btn btn-primary">Submit</button>
-                                        </div>
+                                </div>
+                                <div class="row mt-4">
+                                    <div class="col text-center">
+                                        <button type="submit" name="contact" class="btn btn-primary">Submit</button>
                                     </div>
-                                </form>
-                            </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-</body>
-
-</html>
+    </div>
+</section>
